# Examples

./: Makefile  bfs  bfs.cc  boost_serialization.cpp  bst.cc  bst_max_height.c  copy_ctor.cc  count.c  cout_examples.cc  dfs  dfs.cc  dijkstra.cc  epoll_example  epoll_example.c  file.cc  filters_opencv.cpp  inheritance.cc  observer.cc  pointer  pointer.c  priority  priority.cc  queue  queue.cc  singleton.cc  socket  socket.c  socket_with_sendfile  socket_with_sendfile.c  stack  stack.cc  struct  struct.c  template_twisted.py  ublas_example.cc  unique_ptr.cc  use_map.cc  use_vector.cc  vector_inserter.cc  vector_on_vector.cc
autotools/: Makefile.sem_autotools  autogen.sh  config.status  configure  configure.ac  libtool
autotools/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
autotools/lib/: Makefile  Makefile.am  Makefile.in  liba.c  libb.c  libheader.h
autotools/src/: Makefile  Makefile.am  Makefile.in  app.c  app.h  main.c  test
autotools2/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  configure.scan  hello  hello.c  hello.c.ori
autotools2/.deps/: hello.Po
autotools2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
autotools2/lib/: Makefile  Makefile.am  Makefile.in  libFunc.c  libFunc.h
autotools2/lib/.deps/: libFunc.Po
autotools2/lib2/: Makefile  Makefile.am  Makefile.in  libtest.c  libtest.h
autotools2/lib2/.deps/: libtest.Po
cppunit/: money.h  moneytest.cpp  moneytest.h
folly/: BUILD.txt  teste_folly_json.cpp
(+4 files in other folders)
