#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([hello], [1.0], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE([hello],[1.0])
AC_CONFIG_SRCDIR([hello.c])
AC_CONFIG_HEADERS([config.h])

AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_HEADERS([sys/time.h])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 lib2/Makefile])
AC_OUTPUT
